# URLScan-Portable-GUI

./: .gitignore  Cargo.toml  README.md  results.json  uuid.txt
src/: functions.rs  main.rs
