[package]
name = "urlscan-portable-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe =  "0.21.3"
reqwest = { version = "0.11.23", features = ["blocking","json"]}
tokio = { version = "1", features = ["full"] } 
mini-redis = "0.4"
serde_json = "1"
serde = { version = "1.0.94", features = ["derive"] }